# src/modules/video/dto/create-video.dto.ts
@@ -1,3 +1,3 @@
-import { OmitType } from '@nestjs/swagger';
+import { PickType } from '@nestjs/swagger';
 import { Video } from '../entities/video.entity';
-export class CreateVideoDto extends OmitType(Video, ['id'] as const) {}
+export class CreateVideoDto extends PickType(Video, ['link'] as const) {}
